Fix logos not clickable on IE

--- a/core/src/plugins/access.ajxp_home/res/home.less
+++ b/core/src/plugins/access.ajxp_home/res/home.less
@@ -523,6 +523,7 @@ div#tutorial_dl_apps_pane{
   position: absolute;
   margin-top: 10px;
   opacity: 1;
+  z-index: 2;
   a{
     text-decoration: none;
     color: white;
